k8s/psql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: psql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: psql
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: psql
    spec:
      containers:
      - name: psql
        image: postgres:13
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5432
        resources:
          requests:
            cpu: 750m
          limits:
            cpu: 1000m
---
apiVersion: v1
kind: Service
metadata:
  name: psql
spec:
  type: NodePort
  ports:
  - port: 5432
    nodePort: 30007
  selector:
    app: psql
