k8s/eap-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eap72
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eap72
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: eap72
    spec:
      containers:
      - name: eap72
        image: eap72-psql:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 750m
          limits:
            cpu: 1000m
---
apiVersion: v1
kind: Service
metadata:
  name: eap72
spec:
  type: NodePort
  ports:
  - port: 8080
  selector:
    app: eap72
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eap72-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: eap72-test.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: eap72
                port:
                  number: 8080
